change order of search bar and restaurant table. Fix spacing between those elements.

--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ dialog::backdrop {
   overflow-y: auto;
   overflow-x: hidden;
   -webkit-overflow-scrolling: touch;
-  margin-top: 0.5rem;
+  margin-top: 0.25rem;
   margin-bottom: 0.5rem;
 }
 
@@ -187,6 +187,10 @@ td {
   padding-bottom: 0.5rem;
 }
 
+.pane-middle {
+  margin-top: 0.5rem;
+}
+
 .pane-right {
   text-align: center;
   border: 2px solid #000000;
@@ -220,7 +224,7 @@ td {
     overflow-y: auto;
     overflow-x: hidden;
     -webkit-overflow-scrolling: touch;
-    margin-top: 0.5rem;
+    margin-top: 0.25rem;
     margin-bottom: 0.5rem;
   }
 
